syntax = "proto3";

package io.shield.squareajax.proto;

import "skyScreen.proto";

message ChannelUser{
  int64 roleId = 1;
  string wdId = 2;
  int64 channel = 3;
  int64 subChannel = 4;
  repeated SkyScreen skyScreen = 5;
}